# risk-manager-pro

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  azure-pipelines.yml  azure.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_conversations_and_documents.py  003_organizations_and_memberships.py  004_session_timeout_support.py  005_organization_settings.py  006_add_invitation_status.py  007_add_source_type_to_documents.py  008_risk_entries_and_mitigations.py  009_notifications.py  010_add_folder_path_to_documents.py  011_qaqc_email_delivery.py  012_user_notification_preferences.py  013_drop_serious_risk_level.py  014_workflows.py  015_risk_alert_thresholds.py  016_flip_severity_scale.py  017_revert_severity_value_flip.py  018_doc_interp_prompt_v1_1.py  019_core_logic_v20260415.py  020_risk_register_prompt.py  021_risk_register_function_type.py  022_rr_schema_expansion.py  023_rr_dual_sync_acp.py  024_recompute_risk_levels_for_matrix.py  025_document_content_hash.py  026_risk_outcome_cache.py  027_bump_max_output_tokens_default.py
backend/app/: main.py
backend/app/core/: auth.py  auth_throttle.py  config.py  database.py  exceptions.py  logging.py  middleware.py  rate_limit.py  tasks.py  telemetry.py
backend/app/models/: __init__.py  audit.py  conversation.py  document.py  message.py  notification.py  organization.py  (+9 more)
backend/scripts/: backfill_memberships.py  load_regulatory.py  seed.py
backend/tests/: conftest.py
(+252 files in other folders)
